# slime

./: .gitignore  Cargo.toml  neat1.sh  raster.sh  record.sh  script.sh  sus.xcf
src/: lib.rs  main.rs  record.rs  sim.rs  xiaolin.rs
