[package]
name = "slime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#idek_basics = { path = "../idek-basics" }
idek_basics = { git = "http://github.com/Masterchef365/idek-basics.git", rev = "80e91fe91b5" }
rand = "0.8"
structopt = { version = "0.3", default-features = false }
rayon = "1.5"

[profile.release]
debug = true
