[package]
name = "slime"
version = "0.1.0"
edition = "2021"
default-run = "gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#idek_basics = { path = "../idek_basics" }
idek_basics = { git = "http://github.com/Masterchef365/idek-basics.git", rev = "6a3e9c74" }
rand = { version = "0.8", features = ["small_rng"] }
structopt = { version = "0.3", default-features = false }
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
nalgebra = { version = "0.26", features = ["serde-serialize"] }
png = "0.17.1"
anyhow = "1"
